[project]
name = "LAPSdog"
version = "0.1.0"
description = "The bestest boy that fetches Windows LAPS secrets and brings them back, decrypted and happy"
authors = [{ name = "investigato", email = "investigato@protonmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dpapi-ng[kerberos]>=0.2.0",
    "gssapi>=1.10.1",
    "python-ldap>=3.4.3",
    "pycryptodome>=3.23.0",
]
